--- a/repotable/package.json
+++ b/repotable/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "@types/react-table": "^7.7.1",
+    "@types/styled-components": "^5.1.9",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "graphql": "^15.5.0",
@@ -21,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
+    "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.0.1"
   },
