--- a/repotable/package.json
+++ b/repotable/package.json
@@ -9,7 +9,8 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.0",
-    "@types/react": "^17.0.6",
+    "@types/prop-types": "^15.7.3",
+    "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "@types/react-table": "^7.7.1",
     "@types/styled-components": "^5.1.9",
@@ -51,6 +52,10 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint": "^7.27.0",
+    "eslint-plugin-react": "^7.23.2",
     "react-test-renderer": "^17.0.2"
   }
 }
